[package]
name = "hello-api"
version = "0.1.0"
authors = ["linrium <linrium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.41"
thiserror = "1.0"
parking_lot = "0.11.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"